remove useless deps

--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "github:discordjs/discord.js",
-    "ffmpeg-binaries": "^4.0.0",
-    "klasa": "github:dirigeants/klasa",
-    "node-opus": "^0.3.0",
-    "ytdl-core": "^0.21.1"
+    "klasa": "github:dirigeants/klasa"
   },
   "repository": "https://github.com/Tylertron1998/klasa-music-plugin"
 }
