maybe kyra will not bitch now c:

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "discord.js": "github:discordjs/discord.js",
     "klasa": "github:dirigeants/klasa"
   },
+  "devDependencies": {
+    "ytdl-core": "^0.21.1"
+  },
   "repository": "https://github.com/Tylertron1998/klasa-music-plugin"
 }
