--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "klasa-music-plugin",
   "version": "0.0.9",
   "description": "A plugin for the Klasa discord.js framework to easily get music up and running.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "tylertron",
   "license": "ISC",
   "dependencies": {
     "discord.js": "github:discordjs/discord.js",
